--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.10",
+    "@nestjs/terminus": "^10.2.3",
     "class-validator": "^0.14.1",
     "nestjs-i18n": "^10.4.5",
     "nestjs-telegraf": "^2.8.1",
